backend/src/main/java/com/example/lms/api/error/ErrorCode.java
package com.example.lms.api.error;

public enum ErrorCode {
  UNAUTHORIZED,
  FORBIDDEN,
  NOT_FOUND,
  VALIDATION_ERROR,
  CONFLICT,
  DB_ERROR,
  EXTERNAL_API_ERROR,
  INTERNAL_ERROR
}
